# KamuyWallet

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  SECURITY.md  TELEGRAM_CREATEWALLET_FIX.md  install.sh  pimlico.json  skill.yaml
contracts-eth/: foundry.toml
contracts-eth/broadcast/DeployMpcContracts.s.sol/84532/: run-latest.json
contracts-eth/deployments/: base-sepolia.md
contracts-eth/script/: DeployMpcContracts.s.sol
contracts-eth/src/: MpcSmartAccount.sol
contracts-eth/src/interfaces/: IEntryPoint.sol  UserOperationLib.sol
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  context.rs  main.rs  progress.rs  task_runner.rs
crates/cli/src/commands/: approve.rs  completions.rs  config_cmd.rs  create_wallet.rs  export_agent_config.rs  history.rs  init.rs  lock.rs  mod.rs  pending.rs  policy.rs  recover.rs  reject.rs  rotate.rs  show_recovery_key.rs  sign.rs  start.rs  status.rs  stop.rs  unlock.rs
crates/cli/tests/: integration_tests.rs
crates/mpc-core/: Cargo.toml  FORWARD_SECRECY.md
crates/mpc-core/src/: error.rs  lib.rs  types.rs
crates/mpc-core/src/dkg/: messages.rs  mod.rs  protocol.rs
crates/mpc-core/src/key/: derivation.rs  encryption.rs  mod.rs  storage.rs
crates/mpc-core/src/sign/: messages.rs  mod.rs  protocol.rs
crates/mpc-core/src/utils/: math.rs  mod.rs  serialization.rs
crates/smart-account/: Cargo.toml  README.md
crates/smart-account/examples/: generate_test_keys.rs
crates/smart-account/src/: gas.rs  lib.rs
crates/smart-account/src/kernel/: mod.rs
crates/smart-account/src/mpc/: mod.rs
crates/smart-account/src/pimlico/: mod.rs
crates/smart-account/src/steward/: mod.rs
crates/smart-account/src/userop/: mod.rs
crates/smart-account/tests/: userop_tests.rs
crates/starter/: Cargo.toml
crates/steward/: Cargo.toml  README.md  default_policy.json
crates/steward/benches/: steward_bench.rs
crates/steward/src/: config.rs  error.rs  lib.rs  main.rs  transaction.rs  types.rs
crates/steward/src/api/: mod.rs  routes.rs  server.rs
crates/steward/src/approval/: mod.rs
crates/steward/src/email/: mod.rs  sender.rs
crates/steward/src/policy/: engine.rs  mod.rs  rules.rs  schema.rs  whitelist.rs
crates/steward/src/queue/: mod.rs  notifier.rs  processor.rs
crates/steward/src/signing/: mod.rs
crates/steward/src/storage/: mod.rs
crates/steward/src/telegram/: bot.rs  commands.rs  mod.rs  notifications.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: lib.rs  policy.rs  transaction.rs  wallet.rs
crates/wallet-wasm/: Cargo.toml
crates/wallet-wasm/src/: lib.rs
docs/superpowers/plans/: 2026-03-20-core-infrastructure.md  2026-03-20-openclaw-integration.md  2026-03-20-zero-friction-setup.md
docs/superpowers/specs/: 2026-03-20-simplified-ux-design.md  2026-03-20-zero-friction-setup-design.md
scripts/: build-release.sh  install.sh
skills/kamuy-wallet/: README.md  skill.md  skill.yaml
skills/kamuy-wallet/handlers/: __init__.py  payment.py  query.py
