[package]
name = "kamuy-mpc-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kris <kris@kamuy.io>"]
license = "MIT OR Apache-2.0"
description = "MPC core library for Kamuy Wallet - 2-of-3 threshold ECDSA"
keywords = ["mpc", "threshold", "ecdsa", "wallet", "crypto"]
categories = ["cryptography", "authentication"]

[features]
default = ["std"]
std = ["subtle/std", "zeroize/std"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/js"]

[dependencies]
# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "sha256", "arithmetic", "serde"] }
elliptic-curve = { version = "0.13", features = ["sec1", "arithmetic", "alloc"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
blake3 = { version = "1.5", features = ["pure"] }
hmac = "0.12"
ripemd = "0.1"

# Encryption
chacha20poly1305 = "0.10"
aead = "0.5"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive", "std"] }
subtle = { version = "2.5", features = ["const-generics", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Error handling
thiserror = "1.0"
anyhow = { version = "1.0", optional = true }

# Async
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# BIP32
derivation-path = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1.9"
criterion = "0.5"
