[package]
name = "kamuy-smart-account"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kris <kris@kamuy.io>"]
license = "MIT OR Apache-2.0"
description = "ERC-4337 Smart Account integration for Kamuy Wallet with Pimlico"
keywords = ["erc4337", "smart-account", "pimlico", "kernel", "ethereum"]
categories = ["cryptography", "authentication", "web-programming"]

[dependencies]
# Core MPC library
kamuy-mpc-core = { path = "../mpc-core" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum
ethers = { version = "2.0", features = ["rustls", "abigen"] }
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-core = "2.0"

# ERC-4337 types
alloy-primitives = "0.6"
alloy-sol-types = "0.6"

# Cryptography
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
rand = "0.8"

# Big integers
ruint = "1.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# URL parsing
url = "2.5"

# Lazy static
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.12"
